# sus-repo-finder

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  check_last_analyzed.js  claude-progress-feature-13.txt  claude-progress.txt  features.db-shm  features.db-wal  get_feature_24.js  get_feature_26.js  get_feature_69_details.js  get_feature_88.js  get_feature_90.js  init.sh  parse_context_result.js  read_feature.py  run-crawler.sh  run-dashboard.sh  setup_test_last_analyzed.js  start-crawler-bg.sh  start-dashboard-bg.sh  test-crawler-3002.sh  test_binary_data.json  test_build_download.json  test_compiler_flags.json  test_compiler_flags2.json  test_concurrent.sh  test_context_extraction.rs  test_context_payload.json  test_context_result.json  test_detector_cli.rs  test_dlopen.json  test_dynamic_lib.json  test_file_access.json  test_huge_nesting.json  test_malformed2.json  test_malformed3.json  test_malformed4.json  test_malformed5.json  (+7 more)
data/crate_cache/libc-1.0.0-alpha.2/: .cargo_vcs_info.json  Cargo.toml
data/crate_cache/rand-0.10.0-rc.6/: .cargo_vcs_info.json  Cargo.toml
prompts/: .spec_status.json  app_spec.txt  initializer_prompt.md
sus-core/: Cargo.toml
sus-core/migrations/: 001_initial_schema.sql  001_initial_schema_down.sql
sus-core/src/: db.rs  lib.rs  models.rs  types.rs
sus-crawler/: Cargo.toml
sus-crawler/src/: api.rs  crates_io.rs  crawler.rs  downloader.rs  lib.rs  main.rs  templates.rs
sus-crawler/templates/: base.html  detailed.html  status.html
sus-dashboard/: Cargo.toml
sus-dashboard/src/: api.rs  main.rs  templates.rs
sus-dashboard/templates/: base.html  crate_detail.html  crate_list.html  error.html  landing.html  not_found.html
sus-detector/: Cargo.toml
sus-detector/src/: detector.rs  lib.rs  patterns.rs
