[workspace]
resolver = "2"
members = [
    "sus-core",
    "sus-detector",
    "sus-crawler",
    "sus-dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sus Repo Finder Team"]
license = "MIT"
repository = "https://github.com/example/sus-repo-finder"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Rust parsing
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Templating
askama = "0.12"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
flate2 = "1.0"
tar = "0.4"
base64 = "0.22"
regex = "1.0"
