[package]
name = "sus-dashboard"
version.workspace = true
edition.workspace = true

[dependencies]
sus-core = { path = "../sus-core" }
sus-detector = { path = "../sus-detector" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
